--- a/submissions/OlgaDubynka/form_task/src/index.html
+++ b/submissions/OlgaDubynka/form_task/src/index.html
@@ -286,7 +286,7 @@
             </h4>
             <a href="#" class="fb">Facebook</a>
             <a href="#" class="tw">Twitter</a>
-            <a href="#" class="ld">Linkedin</a>
+            <a href="#" class="in">Linkedin</a>
           </div>
           <a href="#" class="footer-logo">
             <img src="images/footer-logo.png" alt="logo-of-company" class="logo-img">
