--- a/submissions/IrynaY/react-friends-app/public/index.html
+++ b/submissions/IrynaY/react-friends-app/public/index.html
@@ -8,10 +8,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <title>React App</title>
+    <title>App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
