--- a/submissions/Aldegid/friends-app/index.html
+++ b/submissions/Aldegid/friends-app/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Thasadith:400,700" rel="stylesheet">
-  <title>Document</title>
+  <title>Friends App</title>
 </head>
 
 <body>
